2007-05-29  Alexis Sukrieh  <sukria@backup-manager.org>

	* Fixed a typo in the user-guide (bug #167).

2007-05-27  Alexis Sukrieh  <sukria@backup-manager.org>
	
	* Fixed all the tests scripts in t/
	* Fixed the lzma commandline so the tar.lz archives are built.

2007-04-24  Alexis Sukrieh  <sukria@backup-manager.org>

	* Release: 0.7.6

2007-03-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* Support for a new variable that control whether BM should purge archives
	made by other instance of the one that is running (BM_ARCHIVE_STRICTPURGE)
	(closes: #153).

2007-02-20	Alexis Sukrieh	<sukria@backup-manager.org>

	* lib/backup-methods.sh
	  + change every call to external command so that we can read their return
	  code.
	  + new function check_error_code() to handle BM's behaviour according to
	  the external command's return codes.
	  + If a return code equals 1 and the archive is created, consider it as a
	  warning instead of an error (closes: #152).	  
	* Don't stop the main process if errors are triggered by external
	  commands (closes: #141).

2007-01-02	Alexis Sukrieh	<sukria@backup-manager.org>

	* doc/user-guide.sgml, doc/user-guide.txt
	  + More precise documentation about how to use a zero-TTL for local
	  purging with a different one for remote ones.
	  (closes: #144)

2007-01-02	Alexis Sukrieh	<sukria@backup-manager.org>

	* lib/backup-methods.sh
	  + Fix the security vulnerability about passing MySQL client password
	  through the commandline. Using ~/.my.cnf instead.
	  (closes: #146)

2006-12-29	Alexis Sukrieh	<sukria@backup-manager.org>

	* doc/user-guide.sgml, doc/user-guide.txt
	  + New section about the encryption using GPG.
	  (closes: #132)

2006-12-29	Alexis Sukrieh	<sukria@backup-manager.org>

	* lib/sanitize.sh
	  + Make sure BM_ENCRYPTION_RECIPIENT is defined when BM_ENCRYPTION_METHOD
	  is set to gpg.
	* lib/backup-methods.sh
	  + Handle gently encryption when building meta commands.
	  (closes: #135)